--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <section id="about" class="container">
     <div class="about-container">
       <div class="profile-container">
-        <img src="/img/image.jpeg" alt="Profile Picture" class="profile-picture">
+        <img src="img/image.jpeg" alt="Profile Picture" class="profile-picture">
       </div>
       <div class="about-content">
         <h2>About Me</h2>
@@ -93,13 +93,13 @@ My commitment to staying updated with the latest industry trends and my active p
     <h2>Projects</h2>
     <div class="projects-container">
       <div class="project">
-        <img src="/img/grocery website.jfif" alt="Grocery Website">
+        <img src="img/grocery website.jfif" alt="Grocery Website">
         <h3>Grocery Website</h3>
         <p>Full-stack project using HTML, CSS, JavaScript, PHP, and MySQL for online grocery shopping.</p>
         <a href="https://github.com/Muskankumari2002" class="view-btn">View Project</a>
       </div>
       <div class="project">
-        <img src="/img/art2.jpg" alt="Art By Cu">
+        <img src="img/art2.jpg" alt="Art By Cu">
         <h3>Art By Cu</h3>
         <p>Led the "Art By Cu" project for Chandigarh University, crafting the frontend with HTML, CSS, and JavaScript.</p>
         <a href="https://github.com/Muskankumari2002" class="view-btn">View Project</a>
@@ -107,13 +107,13 @@ My commitment to staying updated with the latest industry trends and my active p
     </div>
     <div class="projects-container">
       <div class="project">
-        <img src="/img/Algo visualizer.jfif" alt="Algorithm Visualizer">
+        <img src="img/Algo visualizer.jfif" alt="Algorithm Visualizer">
         <h3>Algorithm Visualizer</h3>
         <p>Led the development, focusing on the front-end using JavaScript. Implemented visualizations for various algorithms and reviewed documentation. Leveraging C++ and data structures, the project offers an interactive platform for visualizing algorithmic processes, enhancing understanding and learning.</p>
         <a href="https://github.com/Muskankumari2002" class="view-btn">View Project</a>
       </div>
       <div class="project">
-        <img src="/img/sustance monitoring.jpg" alt="Distance Monitoring System">
+        <img src="img/sustance monitoring.jpg" alt="Distance Monitoring System">
         <h3>Distance Monitoring System</h3>
         <p>An IoT project using Arduino Uno and Tinker CAD for circuit simulation. Promotes social distancing during the pandemic by measuring distances with sensors.</p>
         <a href="https://github.com/Muskankumari2002" class="view-btn">View Project</a>
@@ -124,7 +124,7 @@ My commitment to staying updated with the latest industry trends and my active p
   <section id="resume" class="container">
     <h2>Resume</h2>
     <p>Download my resume in PDF format:</p>
-    <a href="/Resumee_Muskan.pdf" download="Muskan_Kumari_Resume.pdf" class="download-btn">Download Resume</a>
+    <a href="Resumee_Muskan.pdf" download="Muskan_Kumari_Resume.pdf" class="download-btn">Download Resume</a>
   </section>
   
   <section id="blog" class="container">
@@ -160,78 +160,78 @@ My commitment to staying updated with the latest industry trends and my active p
   <div class="gallery-container">
     <!-- Gallery Item 1 -->
     <div class="gallery-item">
-      <img src="/img/img 11.jpeg" alt="Work 1">
+      <img src="img/img 11.jpeg" alt="Work 1">
       <p>Description of Work 1</p>
     </div>
 
     <!-- Gallery Item 2 -->
     <div class="gallery-item">
-      <img src="/img/img 12.jpeg" alt="Work 2">
+      <img src="img/img 12.jpeg" alt="Work 2">
       <p>Description of Work 2</p>
     </div>
 
     <!-- Gallery Item 3 -->
     <div class="gallery-item">
-      <img src="/img/img 13.jpeg" alt="Work 3">
+      <img src="img/img 13.jpeg" alt="Work 3">
       <p>Description of Work 3</p>
     </div>
 
     <!-- Gallery Item 4 -->
     <div class="gallery-item">
-      <img src="/img/img 14.jpeg" alt="Work 4">
+      <img src="img/img 14.jpeg" alt="Work 4">
       <p>Description of Work 4</p>
     </div>
 
     <!-- Gallery Item 5 -->
     <div class="gallery-item">
-      <img src="/img/img 15.jpeg" alt="Work 5">
+      <img src="img/img 15.jpeg" alt="Work 5">
       <p>Description of Work 5</p>
     </div>
 
     <!-- Gallery Item 6 -->
     <div class="gallery-item">
-      <img src="/img/img 16.jpeg" alt="Work 6">
+      <img src="img/img 16.jpeg" alt="Work 6">
       <p>Description of Work 6</p>
     </div>
 
     <div class="gallery-item">
-      <img src="/img/img 17.jpeg" alt="Work 7">
+      <img src="img/img 17.jpeg" alt="Work 7">
       <p>Description of Work 7</p>
     </div>
     <div class="gallery-item">
-      <img src="/img/img 19.jpeg" alt="Work 9">
+      <img src="img/img 19.jpeg" alt="Work 9">
       <p>Description of Work 9</p>
     </div><div class="gallery-item">
-      <img src="/img/img 2.jpeg" alt="Work 10">
+      <img src="img/img 2.jpeg" alt="Work 10">
       <p>Description of Work 10</p>
     </div><div class="gallery-item">
-      <img src="/img/img 3.jpeg" alt="Work 11">
+      <img src="img/img 3.jpeg" alt="Work 11">
       <p>Description of Work 11</p>
     </div><div class="gallery-item">
-      <img src="/img/img 4.jpeg" alt="Work 12">
+      <img src="img/img 4.jpeg" alt="Work 12">
       <p>Description of Work 12</p>
     </div><div class="gallery-item">
-      <img src="/img/img 5.jpeg" alt="Work 13">
+      <img src="img/img 5.jpeg" alt="Work 13">
       <p>Description of Work 13</p>
     </div><div class="gallery-item">
-      <img src="/img/img 6.jpeg" alt="Work 14">
+      <img src="img/img 6.jpeg" alt="Work 14">
       <p>Description of Work 14</p>
     </div><div class="gallery-item">
-      <img src="/img/img 8.jpeg" alt="Work 16">
+      <img src="img/img 8.jpeg" alt="Work 16">
       <p>Description of Work 16</p>
     </div><div class="gallery-item">
-      <img src="/img/img 9.jpeg" alt="Work 17">
+      <img src="img/img 9.jpeg" alt="Work 17">
       <p>Description of Work 17</p>
     </div><div class="gallery-item">
-      <img src="/img/img 10.jpeg" alt="Work 18">
+      <img src="img/img 10.jpeg" alt="Work 18">
       <p>Description of Work 18</p>
     </div>
     <div class="gallery-item">
-      <img src="/img/img1.jpeg" alt="Work 8">
+      <img src="img/img1.jpeg" alt="Work 8">
       <p>Description of Work 8</p>
     </div>
     <div class="gallery-item">
-      <img src="/img/img7.jpeg" alt="Work 15">
+      <img src="img/img7.jpeg" alt="Work 15">
       <p>Description of Work 15</p>
   </div>
 </div>
